--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <div id="container">
         <div id="display"></div>
         <div id="buttons">
-            <div class="nums">1</div>
-            <div class="nums">2</div>
-            <div class="nums">3</div>
-            <div class="nums operator">+</div>
-            <div class="nums">4</div>
-            <div class="nums">5</div>
-            <div class="nums">6</div>
-            <div class="nums operator">&mdash;</div>
-            <div class="nums">7</div>
-            <div class="nums">8</div>
-            <div class="nums">9</div>
-            <div class="nums operator">x</div>
-            <div class="nums dot">.</div>
-            <div class="nums">0</div>
-            <div class="nums" id="clear">CE</div>
-            <div class="nums operator">/</div>
+            <div class="btn num">1</div>
+            <div class="btn num">2</div>
+            <div class="btn num">3</div>
+            <div class="btn operator">+</div>
+            <div class="btn num">4</div>
+            <div class="btn num">5</div>
+            <div class="btn num">6</div>
+            <div class="btn operator">&mdash;</div>
+            <div class="btn num">7</div>
+            <div class="btn num">8</div>
+            <div class="btn num">9</div>
+            <div class="btn operator">x</div>
+            <div class="btn dot">.</div>
+            <div class="btn num">0</div>
+            <div class="btn" id="clear">CE</div>
+            <div class="btn operator">/</div>
         </div>
     </div>
 </body>
