added backspace and enter button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="display"></div>
-        <div id="buttons">
+        <div id="buttons1">
             <div class="btn num">1</div>
             <div class="btn num">2</div>
             <div class="btn num">3</div>
@@ -27,6 +27,10 @@
             <div class="btn num">0</div>
             <div class="btn" id="clear">CE</div>
             <div class="btn operator">/</div>
+        </div>
+        <div id="buttons2">
+            <div class="side backspace">&#9664;</div>
+            <div class="side enter"><img src="images/enter.png" alt=""></div>
         </div>
     </div>
 </body>
