box for operator to show up

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container">
+        <div id="current-op"></div>
         <div id="display"></div>
         <div id="buttons1">
             <div class="btn num">1</div>
